--- a/frontend/src/Admin/Pages/AdminDashboard/AdminDashboard.css
+++ b/frontend/src/Admin/Pages/AdminDashboard/AdminDashboard.css
@@ -14,6 +14,12 @@
 .dashboard-page-header-content {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
+
+.dashboard-page-header-left {
+  display: flex;
+  align-items: center;
   gap: 0.75rem;
 }
 
@@ -182,13 +188,15 @@
 .dashboard-order-info h4 {
   color: #111827;
   font-size: 0.875rem;
-  margin: 0 0 0.25rem 0;
 }
 
 .dashboard-order-info p {
   color: #6b7280;
   font-size: 0.75rem;
   margin: 0;
+}
+.dashboard-order-info .customer {
+  color: rgb(192, 16, 16);
 }
 
 .dashboard-order-right {
